Update portfolio title and subtitle content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Oussama Nouaceur — Portfolio</title>
+  <title>Oussama Nouaceur </title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -185,7 +185,7 @@
         <div class="hero-left">
           <div class="hi-kicker">Hello — I'm</div>
           <div class="name">Oussama <span style="color:var(--neon1)">Nouaceur</span></div>
-          <div class="subtitle">Intermediate Designer • Visual Communication • Digital Creativity</div>
+          <div class="subtitle">Intermediate Designer </div>
           <div style="color:var(--muted);max-width:560px">
             I craft visual experiences — combining neon vibes, bold typography and modern UI layout to tell stories through design.
           </div>
@@ -252,12 +252,6 @@
         <div style="margin-top:18px;color:var(--muted);font-size:13px">
           Available for freelance & collaboration.
         </div>
-      </div>
-
-      <div class="portrait-wrap" aria-hidden="false">
-        <img src="portrait.jpg" alt="Oussama Nouaceur" class="portrait">
-        <div class="glow-line"></div>
-      </div>
     </section>
 
     <footer>
